object import done.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageImportObject.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageImportObject.properties
@@ -18,7 +18,7 @@ page.subTitle=to midPoint
 PageImportObject.getObjectsFrom=Get objects from
 PageImportObject.file=File
 PageImportObject.embeddedEditor=Embedded editor
-pageImportObject.chooseFile=Choose file:
 PageImportObject.button.import=Import object
 pageImportObject.message.nullFile=Uploaded file is null.
 pageImportObject.message.emptyXml=Can't save empty xml.
+PageImportObject.message.help=Choose Xml file for import.
