--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/error/PageError.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/error/PageError.properties
@@ -3,7 +3,7 @@ PageError.quote=Failure is simply the opportunity to begin again, this time more
 PageError.quoteAuthor=Henry Ford
 PageError.message=Unexpected error occurred, if necessary please contact system administrator.
 PageError.error.401=unauthorized (401)
-PageError.error.403=forbidded (403)
+PageError.error.403=forbidden (403)
 PageError.error.404=not found (404)
 PageError.error.500=internal error (500)
 PageError.button.back=Back to dashboard
