tab panel component (bootstrap version), basic system configuration, work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
@@ -19,6 +19,7 @@ pageBase.unknownBuildNumber=unknown
 #most common used button names, used also in PageBase subclasses
 PageBase.button.save=Save
 PageBase.button.back=Back
+PageBase.button.cancel=Cancel
 PageBase.button.run=Run
 PageBase.button.delete=Delete
 
