--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageSystemConfiguration.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageSystemConfiguration.properties
@@ -14,7 +14,6 @@
 # limitations under the License.
 #
 page.title=Configuration
-
-pageSystemConfiguration.user.title=Personalization
+page.subTitle=for midPoint
 pageSystemConfiguration.system.title=System
 pageSystemConfiguration.logging.title=Logging
