--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
@@ -13,20 +13,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-PageSystemConfiguration.title.basic=Basic
-PageSystemConfiguration.title.accountSynchronization=Global account synchronization settings
-PageSystemConfiguration.title.passwordPolicy=Global password policy
-PageSystemConfiguration.title.modelHooks=Model hooks
-PageSystemConfiguration.title.userTemplate=Default user template
-PageSystemConfiguration.title.connectorFramework=Connector frameworks configuration
-PageSystemConfiguration.title.orgStructureRoots=Org. structure roots
-PageSystemConfiguration.title.notification=Notification configuration
-PageSystemConfiguration.assignmentPolicyEnforcement=Assignment policy enforcement
-PageSystemConfiguration.mail.defaultFrom=Default from
-PageSystemConfiguration.mail.debug=Debug
-PageSystemConfiguration.mail.mailServer=Mail server
-PageSystemConfiguration.mail.host=Host
-PageSystemConfiguration.mail.port=Port
-PageSystemConfiguration.mail.username=Username
-PageSystemConfiguration.mail.password=Password
-PageSystemConfiguration.mail.transportSecurity=Transport security
+SystemConfigPanel.title.basic=Basic
+SystemConfigPanel.title.accountSynchronization=Global account synchronization settings
+SystemConfigPanel.title.passwordPolicy=Global password policy
+SystemConfigPanel.title.modelHooks=Model hooks
+SystemConfigPanel.title.userTemplate=Default user template
+SystemConfigPanel.title.connectorFramework=Connector frameworks configuration
+SystemConfigPanel.title.notification=Notifications
+SystemConfigPanel.assignmentPolicyEnforcement=Assignment policy enforcement
+SystemConfigPanel.mail.defaultFrom=Default from
+SystemConfigPanel.mail.debug=Debug
+SystemConfigPanel.mail.host=Host
+SystemConfigPanel.mail.port=Port
+SystemConfigPanel.mail.username=Username
+SystemConfigPanel.mail.password=Password
+SystemConfigPanel.mail.transportSecurity=Transport security
