more logging updates.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
@@ -14,29 +14,24 @@
 # limitations under the License.
 #
 LoggingConfigPanel.loggers=Loggers
+LoggingConfigPanel.rootLogger=Root logger
+LoggingConfigPanel.rootAppender=Root appender
+
 LoggingConfigPanel.appenders=Appenders
 LoggingConfigPanel.audit=Audit
-LoggingConfigPanel.rootLevel=Root logger:
-LoggingConfigPanel.rootAppender=Root appender:
-LoggingConfigPanel.auditLog=Audit log:
-LoggingConfigPanel.details=Details:
-LoggingConfigPanel.appender=Appender:
+LoggingConfigPanel.auditLog=Audit log
+LoggingConfigPanel.details=Details
+LoggingConfigPanel.appender=Appender
 LoggingConfigPanel.button.save=Save
 LoggingConfigPanel.button.reset=Reset
-LoggingConfigPanel.button.advanced=Advanced
-LoggingConfigPanel.button.addFilter=Add filter
 LoggingConfigPanel.button.addClassLogger=Add logger
 LoggingConfigPanel.button.addComponentLogger=Add component logger
 LoggingConfigPanel.button.deleteLogger=Delete logger
-LoggingConfigPanel.button.deleteFilter=Delete filter
 LoggingConfigPanel.button.addConsoleAppender=Add console appender
 LoggingConfigPanel.button.addFileAppender=Add file appender
 LoggingConfigPanel.button.deleteAppender=Delete appender
 LoggingConfigPanel.logSubsystemEntryExit=Log subsystem entry/exit
 LoggingConfigPanel.logger=Logger
-LoggingConfigPanel.loggersTable=Loggers table
-LoggingConfigPanel.filter=Filter
-LoggingConfigPanel.filtersTable=Filters table
 LoggingConfigPanel.loggersLevel=Level
 LoggingConfigPanel.loggersAppender=Appender
 LoggingConfigPanel.subsystem.level=Level
@@ -52,14 +47,6 @@ LoggingConfigPanel.appenders.maxHistory=Max. history
 LoggingConfigPanel.appenders.maxFileSize=Max. file size [kB]
 LoggingConfigPanel.appenders.appending=Appending
 
-LoggingConfigPanel.filter.ALL=All
-LoggingConfigPanel.filter.MODEL=Model filter
-LoggingConfigPanel.filter.PROVISIONING=Provisioning filter
-LoggingConfigPanel.filter.REPOSITORY=Repository filter
-LoggingConfigPanel.filter.GUI=Web filter
-LoggingConfigPanel.filter.TASKMANAGER=Task manager filter
-LoggingConfigPanel.filter.RESOURCEOBJECTCHANGELISTENER=Resource object change listener filter
-
 LoggingConfigPanel.logger.ALL=All
 LoggingConfigPanel.logger.MODEL=Model logger
 LoggingConfigPanel.logger.PROVISIONING=Provisioning logger
@@ -73,6 +60,3 @@ logger.duplicate=Logger with name '{0}' is already defined
 
 message.emptyLevel=Level must not be empty
 message.emptyString=Input panel must not be empty
-
-filter.emptyFilter=Filter must not be empty
-filter.duplicate=Filter with name '{0}' is already defined
