--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -97,13 +97,13 @@ AuditEventType.WORKFLOW_PROCESS_INSTANCE=Workflow process instance
 AuditEventType.RECONCILIATION=Reconciliation
 
 
-LoggingLevelType.ALL=ALL
-LoggingLevelType.ERROR=ERROR
-LoggingLevelType.WARN=WARN
-LoggingLevelType.INFO=INFO
-LoggingLevelType.DEBUG=DEBUG
-LoggingLevelType.TRACE=TRACE
-LoggingLevelType.OFF=OFF
+LoggingLevelType.ALL=All
+LoggingLevelType.ERROR=Error
+LoggingLevelType.WARN=Warn
+LoggingLevelType.INFO=Info
+LoggingLevelType.DEBUG=Debug
+LoggingLevelType.TRACE=Trace
+LoggingLevelType.OFF=Off
 
 TaskExecutionStatus.RUNNABLE=Runnable
 TaskExecutionStatus.WAITING=Waiting
