ace editor fixes, debug view refactored.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView.properties
@@ -13,11 +13,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-page.title=View object
+page.title=Object details
+page.subTitle=for '{0}'
 pageDebugView.button.save=Save
 pageDebugView.button.back=Back
-pageDebugView.oid=Oid:
-pageDebugView.name=Name:
+pageDebugView.options=Options
 pageDebugView.edit=Edit
 pageDebugView.encrypt=Protected by encryption
 pageDebugView.validateSchema=Validate schema
