--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
@@ -14,7 +14,10 @@
 # limitations under the License.
 #
 
-page.title=List resources
+page.title=Resources
+page.subTitle=connected to midPoint
+pageResources.resources=Resources
+pageResources.connectorHosts=Connector hosts
 pageResources.name=Name
 pageResources.bundle=Bundle
 pageResources.version=Version
@@ -28,7 +31,6 @@ pageResources.connector.hostname=Hostname
 pageResources.connector.port=Port
 pageResources.connector.timeout=Timeout
 pageResources.connector.protectConnection=Protected
-pageResources.connector.title=Connector hosts
 pageResources.button.label.resource=Resource
 pageResources.button.label.connector=Connector Host
 pageResources.button.discoveryRemote=Discovery
