MID-1627 - laxative function (button) implementation

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList_en_US.utf8.properties
@@ -3,16 +3,23 @@ page.title=List objects
 pageDebugList.button.clear=Clear
 pageDebugList.button.delete=Delete
 pageDebugList.button.deleteSelected=Delete selected
+pageDebugList.button.laxativeButton=Drop all identities
 pageDebugList.button.export=Export
 pageDebugList.button.exportAll=Export all
 pageDebugList.button.label.export=Export\:
 pageDebugList.button.search=Search
 pageDebugList.dialog.title.confirmDelete=Confirm delete
+pageDebugList.dialog.title.confirmLaxative=Confirm dropping all identities
+pageDebugList.dialog.title.confirmLaxativeMessage=Following changes will take effect:
 pageDebugList.message.createFileException=Couldn't create file for download.
 pageDebugList.message.deleteObjectConfirm=Do you really want to delete {0}?
 pageDebugList.message.deleteSelectedConfirm=Do you really want to delete {0} object/s?
 pageDebugList.message.nothingSelected=No object has been selected.
 pageDebugList.message.queryException=Couldn't create query for name substring, reason\: {0}
+pageDebugList.message.countSearchProblem=Couldn't perform search operation on users/shadows
+pageDebugList.message.singleDeleteProblemUser=Couldn't delete user
+pageDebugList.message.singleDeleteProblemShadow=Couldn't delete shadow
+pageDebugList.message.laxativeProblem=Drop all identities operation has not performed successfully
 pageDebugList.name=Name
 pageDebugList.operation=Operation
 pageDebugList.optionsTitle=Options
