--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList_sk_SK.utf8.properties
@@ -3,16 +3,23 @@ page.title=Zoznam objektov
 pageDebugList.button.clear=Vymazať
 pageDebugList.button.delete=Zmazať
 pageDebugList.button.deleteSelected=Zmazať vybrané
+pageDebugList.button.laxativeButton=Vymazať všetky identity
 pageDebugList.button.export=Export
 pageDebugList.button.exportAll=Export all
 pageDebugList.button.label.export=Export\:
 pageDebugList.button.search=Hľadať
 pageDebugList.dialog.title.confirmDelete=Potvrďte zmazanie
+pageDebugList.dialog.title.confirmLaxative=Potvrďte zmazanie všetkých identít
+pageDebugList.dialog.title.confirmLaxativeMessage=Budú vykonané nasledujúce zmeny:
 pageDebugList.message.createFileException=Couldn't create file for download.
 pageDebugList.message.deleteObjectConfirm=Naozaj chcete zmazať objekt?
 pageDebugList.message.deleteSelectedConfirm=Naozaj chcete zmazať {0} objekt(ov)?
 pageDebugList.message.nothingSelected=Nebol vybratý objekt.
 pageDebugList.message.queryException=Nepodarilo sa vytvoriť dopyt pre hľadanie podreťazcov v mene, dôvod\: {0}
+pageDebugList.message.countSearchProblem=Vyhľadávanie medzi usermi/obrazmi sa nepodarilo
+pageDebugList.message.singleDeleteProblemUser=Nepodarilo sa vymazať používateľa
+pageDebugList.message.singleDeleteProblemShadow=Nepodarilo sa vymazať obraz učtu
+pageDebugList.message.laxativeProblem=Nepodarilo sa vymazať všetkých používateľov a obrazy účtov
 pageDebugList.name=Meno
 pageDebugList.operation=Operácia
 pageDebugList.optionsTitle=Možnosti
