--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList.properties
@@ -18,6 +18,7 @@ pageDebugList.optionsTitle=Options
 pageDebugList.selectType=Select object type
 pageDebugList.button.delete=Delete
 pageDebugList.button.deleteSelected=Delete selected
+pageDebugList.button.laxativeButton=Drop all identities
 pageDebugList.name=Name
 pageDebugList.operation=Operation
 pageDebugList.search=Search name
@@ -32,7 +33,13 @@ pageDebugList.button.label.export=Export:
 pageDebugList.message.queryException=Couldn't create query for name substring, reason: {0}
 
 pageDebugList.dialog.title.confirmDelete=Confirm delete
+pageDebugList.dialog.title.confirmLaxative=Confirm dropping all identities
+pageDebugList.dialog.title.confirmLaxativeMessage=Following changes will take effect:
 pageDebugList.message.nothingSelected=No object has been selected.
 pageDebugList.message.deleteObjectConfirm=Do you really want to delete "{0}"?
 pageDebugList.message.deleteSelectedConfirm=Do you really want to delete {0} object/s?
 pageDebugList.message.createFileException=Couldn't create file for download.
+pageDebugList.message.countSearchProblem=Couldn't perform search operation on users/shadows
+pageDebugList.message.singleDeleteProblemUser=Couldn't delete user
+pageDebugList.message.singleDeleteProblemShadow=Couldn't delete shadow
+pageDebugList.message.laxativeProblem=Drop all identities operation has not performed successfully
