table inline menu, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
@@ -21,7 +21,6 @@ pageUsers.givenName=Given name
 pageUsers.familyName=Family name
 pageUsers.fullName=Full name
 pageUsers.email=Email
-pageUsers.optionsTitle=Options
 pageUsers.search=Search text
 pageUsers.button.clearButton=Clear
 pageUsers.button.searchButton=Search
@@ -34,3 +33,5 @@ pageUsers.message.nothingSelected=No user has been selected.
 pageUsers.message.deleteUserConfirm=Do you really want to delete selected {0} user(s)?
 pageUsers.dialog.title.confirmDelete=Confirm delete
 pageUsers.accounts=Accounts
+pageUsers.menu.enable=Enable
+pageUsers.menu.disable=Disable
