user list page search, not finished yet. also execute options - finished.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
@@ -16,13 +16,13 @@
 
 page.title=Users
 page.subTitle=in midPoint
+pageUsers.searchTextPlaceholder=Text
 pageUsers.name=Name
 pageUsers.givenName=Given name
 pageUsers.familyName=Family name
 pageUsers.fullName=Full name
 pageUsers.email=Email
 pageUsers.search=Search text
-pageUsers.button.clearButton=Clear
 pageUsers.button.searchButton=Search
 pageUsers.message.queryError=Error occurred during translation search query to filter.
 pageUsers.button.reconcile=Reconcile
