--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.properties
@@ -14,6 +14,7 @@
 # limitations under the License.
 #
 
+ExecuteChangeOptionsPanel.options=Options
 ExecuteChangeOptionsPanel.label.force=Force
 ExecuteChangeOptionsPanel.label.reconcile=Reconcile
 ExecuteChangeOptionsPanel.label.executeAfterAllApprovals=Execute after all approvals
