--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
@@ -17,10 +17,10 @@
 page.title=Users
 page.subTitle=in midPoint
 pageUsers.searchTextPlaceholder=Text
-pageUsers.name=Name
-pageUsers.givenName=Given name
-pageUsers.familyName=Family name
-pageUsers.fullName=Full name
+SearchType.NAME=Name
+SearchType.GIVEN_NAME=Given name
+SearchType.FAMILY_NAME=Family name
+SearchType.FULL_NAME=Full name
 pageUsers.email=Email
 pageUsers.search=Search text
 pageUsers.button.searchButton=Search
