page user list with inline menu, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
@@ -25,13 +25,11 @@ pageUsers.email=Email
 pageUsers.search=Search text
 pageUsers.button.searchButton=Search
 pageUsers.message.queryError=Error occurred during translation search query to filter.
-pageUsers.button.reconcile=Reconcile
-pageUsers.button.delete=Delete
-pageUsers.button.disable=Disable
-pageUsers.button.enable=Enable
+pageUsers.menu.reconcile=Reconcile
+pageUsers.menu.delete=Delete
+pageUsers.menu.disable=Disable
+pageUsers.menu.enable=Enable
 pageUsers.message.nothingSelected=No user has been selected.
 pageUsers.message.deleteUserConfirm=Do you really want to delete selected {0} user(s)?
 pageUsers.dialog.title.confirmDelete=Confirm delete
 pageUsers.accounts=Accounts
-pageUsers.menu.enable=Enable
-pageUsers.menu.disable=Disable
