users page with inline menu, not finished yet. role editing udpated styles.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
@@ -14,6 +14,8 @@
 # limitations under the License.
 #
 page.title=New role
+page.subTitle=something clever
+pageRole.options=Options
 pageRole.title.editing=Role '{0}' details
 pageRole.edit=Edit
 pageRole.button.back=Back
