--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
@@ -13,7 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-page.title=List tasks
+page.title=Tasks
+page.subTitle=in midPoint
 pageTasks.task.name=Name
 pageTasks.task.category=Category
 pageTasks.task.objectRef=Object reference
