debug list page, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList.properties
@@ -13,18 +13,23 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-page.title=List objects
-pageDebugList.optionsTitle=Options
-pageDebugList.selectType=Select object type
-pageDebugList.button.delete=Delete
+page.title=Raw objects
+page.subTitle=from repository
+pageDebugList.options=Options
+pageDebugList.searchTextPlaceholder=Name
+pageDebugList.objectType=Object type
 pageDebugList.button.deleteSelected=Delete selected
 pageDebugList.button.laxativeButton=Drop all identities
 pageDebugList.name=Name
-pageDebugList.operation=Operation
-pageDebugList.search=Search name
+pageDebugList.description=Description
 pageDebugList.resourceName=Resource name
 pageDebugList.resourceType=Resource type
-pageDebugList.zipCheck=Zip
+pageDebugList.zipCheck=Use zip
+pageDebugList.menu.exportSelected=Export selected
+pageDebugList.menu.exportAllSelectedType=Export all of selected type
+pageDebugList.menu.exportAll=Export all objects
+pageDebugList.menu.deleteSelected=Delete selected
+pageDebugList.menu.deleteAllType=Delete all of selected type
 pageDebugList.button.clear=Clear
 pageDebugList.button.search=Search
 pageDebugList.button.export=Export
