forgot to commit user list changes.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_en_US.utf8.properties
@@ -5,6 +5,10 @@ SearchType.GIVEN_NAME=Given name
 SearchType.NAME=Name
 page.subTitle=in midPoint
 page.title=Users
+pageUsers.name=Name
+pageUsers.givenName=Given name
+pageUsers.familyName=Family name
+pageUsers.fullName=Full name
 pageUsers.accounts=Accounts
 pageUsers.button.searchButton=Search
 pageUsers.dialog.title.confirmDelete=Confirm delete
