--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
@@ -21,6 +21,10 @@ SearchType.NAME=Name
 SearchType.GIVEN_NAME=Given name
 SearchType.FAMILY_NAME=Family name
 SearchType.FULL_NAME=Full name
+pageUsers.name=Name
+pageUsers.givenName=Given name
+pageUsers.familyName=Family name
+pageUsers.fullName=Full name
 pageUsers.email=Email
 pageUsers.search=Search text
 pageUsers.button.searchButton=Search
