--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
@@ -15,6 +15,7 @@
 #
 page.title=Tasks
 page.subTitle=in midPoint
+pageTasks.tasks=Tasks
 pageTasks.task.name=Name
 pageTasks.task.category=Category
 pageTasks.task.objectRef=Object reference
@@ -35,7 +36,7 @@ pageTasks.node.managementPort=Management port
 pageTasks.nodes=Nodes
 pageTasks.state=State
 pageTasks.category=Category
-pageTasks.subtasks=Show subtasks:
+pageTasks.subtasks=Show subtasks
 pageTasks.button.deleteNode=Delete
 pageTasks.button.stopSchedulerAndTasks=Stop scheduler + tasks
 pageTasks.button.startScheduler=Start
