--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
@@ -14,8 +14,9 @@
 # limitations under the License.
 #
 
-page.title=User details
-pageUser.title.editing={0} details
+page.title=New user
+page.subTitle=details
+pageUser.title.editing={0}
 pageUser.accounts=Accounts [{0}]
 pageUser.assignments=Assignments [{0}]
 pageUser.tasks=Tasks [{0}]
