--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
@@ -13,7 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-page.title={0}
+page.title=Accounts
+page.subTitle=on {0}
 pageContentAccounts.accounts=Accounts
 pageContentAccounts.optionsTitle=Options
 pageContentAccounts.search=Search
