SystemStatusPanel implementation. Not finished yet.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/home/PageDashboard_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/home/PageDashboard_en_US.utf8.properties
@@ -4,5 +4,9 @@ PageDashboard.assignments=My Assignments
 PageDashboard.personalInfo=Personal info
 PageDashboard.systemInfo=System status
 PageDashboard.workItems=My work items
+PageDashboard.activeUsers=Active Users
+PageDashboard.activeTasks=Active Tasks
+PageDashboard.serverLoad=Server Load
+PageDashboard.usedRam=Used RAM
 page.subTitle=welcome to midPoint
 page.title=Dashboard
