--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/SystemInfoPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/SystemInfoPanel.properties
@@ -13,14 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-page.title=Dashboard
-page.subTitle=welcome to midPoint
-PageDashboard.accounts=My accounts
-PageDashboard.personalInfo=Personal info
-PageDashboard.workItems=My work items
-PageDashboard.assignments=My Assignments
-PageDashboard.systemInfo=System status
-PageDashboard.activeUsers=Active Users
-PageDashboard.activeTasks=Active Tasks
-PageDashboard.serverLoad=Server Load
-PageDashboard.usedRam=Used RAM
+
+SystemInfoPanel.activeUsers=Active Users
+SystemInfoPanel.activeTasks=Active Tasks
+SystemInfoPanel.serverLoad=Server Load
+SystemInfoPanel.usedRam=Used RAM
