--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/NameStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/NameStep.properties
@@ -15,7 +15,8 @@
 #
 
 NameStep.name=Resource name
-NameStep.location=Location
+NameStep.connectorHost=Connector host
+NameStep.description=Description
 NameStep.hostNotUsed=Not used
 NameStep.connectorName=Connector name
 NameStep.connectorVersion=Connector version
