--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/Wizard.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/Wizard.properties
@@ -14,17 +14,8 @@
 # limitations under the License.
 #
 
-NameStep.title=Resource basics
-NameStep.name=Resource name
-NameStep.connectorHost=Connector host
-NameStep.description=Description
-NameStep.hostNotUsed=Not used
-NameStep.connectorName=Connector name
-NameStep.connectorVersion=Connector version
-NameStep.undefinedVersion=Undefined version
-NameStep.undefinedName=Undefined name
-NameStep.connectorType=Type
-NameStep.connectorBundle=Bundle
-NameStep.connectorInformation=Information
-NameStep.connectorNotSelected=Connector was not selected.
-NameStep.unknownVersion=Unknown
+org.apache.wicket.extensions.wizard.previous=Previous
+org.apache.wicket.extensions.wizard.next=Next
+org.apache.wicket.extensions.wizard.last=Last
+org.apache.wicket.extensions.wizard.cancel=Cancel
+org.apache.wicket.extensions.wizard.finish=Finish
