--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -82,6 +82,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.wicket</groupId>
+                <artifactId>wicket-atmosphere</artifactId>
+                <version>0.14</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.wicket</groupId>
                 <artifactId>wicket-devutils</artifactId>
                 <version>${wicket.version}</version>
             </dependency>
