wizards steps (in header). used in resource wizard as sample.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/NameStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/NameStep.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-NameStep.title=Resource basics
+WizardStep.title=Resource basics
 NameStep.name=Resource name
 NameStep.connectorHost=Connector host
 NameStep.description=Description
