--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaStep.properties
@@ -13,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+WizardStep.title=Schema
 SchemaStep.xml=Xml
 SchemaStep.schema=Schema
 SchemaStep.button.reload=Reload
