more changes in user details

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
@@ -17,10 +17,10 @@
 page.title=New user
 page.subTitle=details
 pageUser.title.editing={0}
-pageUser.accounts=Accounts [{0}]
-pageUser.assignments=Assignments [{0}]
-pageUser.tasks=Tasks [{0}]
-pageUser.orgUnits=Organization units [{0}]
+pageUser.accounts=Accounts
+pageUser.assignments=Assignments
+pageUser.tasks=Tasks
+pageUser.orgUnits=Organization units
 pageUser.button.save=Save
 pageUser.button.back=Back
 pageUser.button.enable=Enable
