h3 header for prism form.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismObjectPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismObjectPanel.properties
@@ -15,3 +15,7 @@
 #
 
 PrismObjectPanel.protectedAccount=Protected account
+PrismObjectPanel.showEmpty=Show empty fields
+PrismObjectPanel.hideEmpty=Hide empty fields
+PrismObjectPanel.minimize=Minimize
+PrismObjectPanel.maximize=Maximize
