--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
@@ -16,6 +16,7 @@
 
 page.title=New user
 page.subTitle=details
+pageUser.userDetails=User details
 pageUser.title.editing={0}
 pageUser.accounts=Accounts
 pageUser.assignments=Assignments
