h3 header fix and check table header for accounts/assignments used on user details.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_en_US.utf8.properties
@@ -1,10 +1,11 @@
 #Sat Oct 12 17:23:53 CEST 2013
-page.title=User details
-pageUser.accounts=Accounts [{0}]
+page.title=User
+page.subTitle=details
+pageUser.accounts=Accounts
 pageUser.assignment.active=Active
 pageUser.assignment.name=Name
 pageUser.assignment.type=Type
-pageUser.assignments=Assignments [{0}]
+pageUser.assignments=Assignments
 pageUser.button.addAccount=Account
 pageUser.button.assignAccount=Account
 pageUser.button.assignOrgUnit=Org. unit
@@ -48,7 +49,7 @@ pageUser.task.category=Category
 pageUser.task.execution=Execution state
 pageUser.task.name=Task name
 pageUser.task.status=Status
-pageUser.tasks=Tasks [{0}]
+pageUser.tasks=Tasks
 pageUser.title.confirmDelete=Confirm delete
 pageUser.title.editing={0} details
 pageUser.title.selectAssignable=Select object(s)
