Fixed bugs related to model task interface introduction.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -72,3 +72,4 @@ pageTasks.category.UserRecomputation=User recomputation
 pageTasks.category.Workflow=Workflow
 pageTasks.category.Cleanup=Cleanup
 pageTasks.category.System=System
+pageTasks.category.null=(undefined)
