clear less/js cache button visible in development mode for all pages.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
@@ -22,6 +22,7 @@ PageBase.button.back=Back
 PageBase.button.cancel=Cancel
 PageBase.button.run=Run
 PageBase.button.delete=Delete
+PageBase.clearCssCache=Clear less/js cache
 
 WorkItemsPanel.name=Name
 WorkItemsPanel.assigned=Assigned to
