user details, account buttons moved to inline menu, not finished yet.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_en_US.utf8.properties
@@ -6,7 +6,7 @@ pageUser.assignment.active=Active
 pageUser.assignment.name=Name
 pageUser.assignment.type=Type
 pageUser.assignments=Assignments
-pageUser.button.addAccount=Account
+pageUser.button.addAccount=Add account
 pageUser.button.assignAccount=Account
 pageUser.button.assignOrgUnit=Org. unit
 pageUser.button.assignRole=Role
@@ -14,7 +14,6 @@ pageUser.button.back=Back
 pageUser.button.delete=Delete
 pageUser.button.disable=Disable
 pageUser.button.enable=Enable
-pageUser.button.label.add=Add
 pageUser.button.label.assign=Assign
 pageUser.button.label.resources=Resource
 pageUser.button.label.role=Role
