--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
@@ -30,7 +30,7 @@ pageUser.button.delete=Delete
 pageUser.button.unlink=Unlink
 pageUser.button.unlock=Unlock
 pageUser.button.submit=Preview changes
-pageUser.button.addAccount=Account
+pageUser.button.addAccount=Add account
 pageUser.button.assignAccount=Account
 pageUser.button.assignRole=Role
 pageUser.button.assignOrgUnit=Org. unit
