user details, removed all obsolete buttons

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
@@ -21,7 +21,6 @@ pageUser.title.editing={0}
 pageUser.accounts=Accounts
 pageUser.assignments=Assignments
 pageUser.tasks=Tasks
-pageUser.orgUnits=Organization units
 pageUser.button.save=Save
 pageUser.button.back=Back
 pageUser.button.enable=Enable
@@ -30,19 +29,15 @@ pageUser.button.delete=Delete
 pageUser.button.unlink=Unlink
 pageUser.button.unlock=Unlock
 pageUser.button.submit=Preview changes
+pageUser.menu.assignRole=Assign role
+pageUser.menu.assignOrg=Assign org. unit
+pageUser.menu.assignAccount=Assign account
 pageUser.button.addAccount=Add account
-pageUser.button.assignAccount=Account
-pageUser.button.assignRole=Role
-pageUser.button.assignOrgUnit=Org. unit
-pageUser.button.unassign=Unassign
+pageUser.menu.unassign=Unassign
 pageUser.assignment.name=Name
 pageUser.assignment.type=Type
 pageUser.assignment.active=Active
 pageUser.description=User in repository
-pageUser.button.label.add=Add
-pageUser.button.label.role=Role
-pageUser.button.label.resources=Resource
-pageUser.button.label.assign=Assign
 
 pageUser.task.name=Task name
 pageUser.task.category=Category
