wizard steps now shows current step correctly.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/ConfigurationStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/ConfigurationStep.properties
@@ -17,3 +17,4 @@ WizardStep.title=Configuration
 configurationProperties=Configuration
 connectorPoolConfiguration=Connector pool
 timeouts=Timeouts
+ConfigurationStep.button.testConnection=Test connection
