Started working on C# Web Service client.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 *.iml
 target
 rebel.xml
+samples/model-client-sample-dotnet/ModelClientSample/ModelClientSample/bin
+samples/model-client-sample-dotnet/ModelClientSample/ModelClientSample/obj
