org. unit details page implementation started.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -164,6 +164,15 @@ MailTransportSecurityType.STARTTLS_REQUIRED=StartTLS required
 MailTransportSecurityType.SSL=SSL
 
 ObjectType.name=Name
+ObjectType.description=Description
+ObjectType.parentOrgRef=Parent org. units
+OrgType.requestable=Requestable
+OrgType.displayName=Display name
+OrgType.identifier=Identifier
+OrgType.costCenter=Cost center
+OrgType.locality=Locality
+OrgType.orgType=Org. type
+FocusType.activation=Activation
 
 ActivationType.title=Activation
 ActivationType.enabled=Enabled
