adding basic JSON parsing + some rest tests..

--- a/infra/prism/pom.xml
+++ b/infra/prism/pom.xml
@@ -46,6 +46,17 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
+        <dependency>
+	<groupId>org.codehaus.jackson</groupId>
+	<artifactId>jackson-core-asl</artifactId>
+	<version>1.9.13</version>
+</dependency>
+            <dependency>
+	<groupId>org.codehaus.jackson</groupId>
+	<artifactId>jackson-mapper-asl</artifactId>
+	<version>1.9.13</version>
+</dependency>
+            
         <!-- TEST -->
         <dependency>
             <groupId>org.testng</groupId>
