--- a/model/model-impl/pom.xml
+++ b/model/model-impl/pom.xml
@@ -81,6 +81,17 @@
 			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
   			<version>2.7.6</version>
 		</dependency>
+		<dependency>
+   <groupId>org.apache.cxf</groupId>
+   <artifactId>cxf-rt-rs-extension-providers</artifactId>
+   <version>2.7.6</version>
+</dependency>
+<dependency>
+    <groupId>org.codehaus.jettison</groupId>
+    <artifactId>jettison</artifactId>
+    <version>1.3.3</version>
+</dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
