--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -32,6 +32,7 @@
         <module>consistency-mechanism</module>
         <!-- DO NOT include longtest by default, this runs too long for
         ordinary build -->
+<!--         <module>rest</module> -->
     </modules>
 
 	<profiles>    
