editor for org. units, work in progress

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageOrgUnit.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageOrgUnit.properties
@@ -14,7 +14,8 @@
 # limitations under the License.
 #
 
-page.title=Org. unit
+page.title=New org. unit
+page.title.edit={0}
 page.subTitle=details
 PageOrgUnit.title.basic=Basic
 PageOrgUnit.title.assignments=Assignments
