report impl module with sample test.

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -55,5 +55,6 @@
         <module>workflow-api</module>
         <module>workflow-impl</module>
         <module>notifications</module>
+        <module>report-impl</module>
     </modules>
 </project>
