SystemConfigPage - Layout changes.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
@@ -30,7 +30,6 @@ LoggingConfigPanel.button.deleteLogger=Delete logger
 LoggingConfigPanel.button.addConsoleAppender=Add console appender
 LoggingConfigPanel.button.addFileAppender=Add file appender
 LoggingConfigPanel.button.deleteAppender=Delete appender
-LoggingConfigPanel.logSubsystemEntryExit=Log subsystem entry/exit
 LoggingConfigPanel.logger=Logger
 LoggingConfigPanel.loggersLevel=Level
 LoggingConfigPanel.loggersAppender=Appender
@@ -54,6 +53,22 @@ LoggingConfigPanel.logger.REPOSITORY=Repository logger
 LoggingConfigPanel.logger.GUI=Web logger
 LoggingConfigPanel.logger.TASKMANAGER=Task manager logger
 LoggingConfigPanel.logger.RESOURCEOBJECTCHANGELISTENER=Resource object change listener logger
+
+LoggingConfigPanel.profiling.general=Profiling - General
+LoggingConfigPanel.profiling.requestFilter=Request Filter:
+LoggingConfigPanel.profiling.performanceStatistics=Performance Statistics:
+LoggingConfigPanel.profiling.subsystems=Profiling - Subsystems
+LoggingConfigPanel.profiling.subsystem.model=Model
+LoggingConfigPanel.profiling.subsystem.repository=Repository
+LoggingConfigPanel.profiling.subsystem.provisioning=Provisioning
+LoggingConfigPanel.profiling.subsystem.ucf=Ucf
+LoggingConfigPanel.profiling.subsystem.resourceObjectChangeListener=Resource Object Change Listener
+LoggingConfigPanel.profiling.subsystem.taskManager=Task Manager
+LoggingConfigPanel.profiling.subsystem.workflow=Workflow
+LoggingConfigPanel.profiling.dumpInterval=Dump interval:
+LoggingConfigPanel.profiling.dumpInterval.placeholder=Dump interval
+LoggingConfigPanel.profiling.entryExit=Profiling - entry/exit
+
 
 logger.emptyLogger=Logger must not be empty
 logger.duplicate=Logger with name '{0}' is already defined
