--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.properties
@@ -21,6 +21,10 @@ SystemConfigPanel.title.userTemplate=Default user template
 SystemConfigPanel.title.connectorFramework=Connector frameworks configuration
 SystemConfigPanel.title.notification=Notifications
 SystemConfigPanel.assignmentPolicyEnforcement=Assignment policy enforcement
+SystemConfigPanel.cleanupPolicy=Cleanup Policy
+SystemConfigPanel.cleanupPolicy.auditRecords=Audit records cleanup interval
+SystemConfigPanel.cleanupPolicy.closedTasks=Closed tasks cleanup interval
+SystemConfigPanel.cleanupPolicy.placeholder=Insert interval
 SystemConfigPanel.mail.defaultFrom=Default from
 SystemConfigPanel.mail.debug=Debug
 SystemConfigPanel.mail.host=Host
