default icons for object types.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -26,23 +26,23 @@ WebModelUtils.couldntLoadObject=Couldn't load object.
 
 DateValidator.message.fromAfterTo=Valid from date must be before valid to date.
 
-schema.objectTypes.account=Account
-schema.objectTypes.connector=Connector
-schema.objectTypes.connectorHost=Connector host
-schema.objectTypes.genericObject=Generic object
-schema.objectTypes.object=Object
-schema.objectTypes.resource=Resource
-schema.objectTypes.node=Node
-schema.objectTypes.valuePolicy=Value policy
-schema.objectTypes.abstractRole=Abstract role
-schema.objectTypes.role=Role
-schema.objectTypes.systemConfiguration=System configuration
-schema.objectTypes.task=Task
-schema.objectTypes.objectTemplate=Object template
-schema.objectTypes.user=User
-schema.objectTypes.org=Organization
-schema.objectTypes.shadow=Shadow
-schema.objectTypes.focus=Focus
+ObjectTypeGuiDescriptor.account=Account
+ObjectTypeGuiDescriptor.connector=Connector
+ObjectTypeGuiDescriptor.connectorHost=Connector host
+ObjectTypeGuiDescriptor.genericObject=Generic object
+ObjectTypeGuiDescriptor.object=Object
+ObjectTypeGuiDescriptor.resource=Resource
+ObjectTypeGuiDescriptor.node=Node
+ObjectTypeGuiDescriptor.valuePolicy=Value policy
+ObjectTypeGuiDescriptor.abstractRole=Abstract role
+ObjectTypeGuiDescriptor.role=Role
+ObjectTypeGuiDescriptor.systemConfiguration=System configuration
+ObjectTypeGuiDescriptor.task=Task
+ObjectTypeGuiDescriptor.objectTemplate=Object template
+ObjectTypeGuiDescriptor.user=User
+ObjectTypeGuiDescriptor.org=Organization
+ObjectTypeGuiDescriptor.shadow=Shadow
+ObjectTypeGuiDescriptor.focus=Focus
 
 SynchronizationPolicyDecision.ADD=Add
 SynchronizationPolicyDecision.DELETE=Delete
