--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -89,7 +89,10 @@ PageAdmin.menu.top.resources=Resources
 PageAdmin.menu.top.resources.list=List resources
 PageAdmin.menu.top.resources.new=New Resource
 PageAdmin.menu.top.workItems=Work items
-PageAdmin.menu.top.workItems.list=List work items
+PageAdmin.menu.top.workItems.list=My work items
+PageAdmin.menu.top.workItems.listProcessInstancesAll=All requests
+PageAdmin.menu.top.workItems.listProcessInstancesRequestedBy=My requests
+PageAdmin.menu.top.workItems.listProcessInstancesRequestedFor=Requests about me
 PageAdmin.menu.top.serverTasks=Server tasks
 PageAdmin.menu.top.serverTasks.list=List tasks
 PageAdmin.menu.top.serverTasks.new=New task
@@ -106,4 +109,6 @@ PageAdmin.menu.top.configuration.security=Security
 PageAdmin.menu.top.configuration.development=Development
 PageAdmin.menu.top.configuration.shadowsDetails=Shadows details
 PageAdmin.menu.top.configuration.expressionEvaluator=Expression evaluator
+PageAdmin.menu.top.configuration.timeTest=Time test
+PageAdmin.menu.top.configuration.logging=Logging
 PageAdmin.menu.top.configuration.about=About
