org. tree page, data can be viewed. not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -15,3 +15,6 @@
 #
 
 TreeTablePanel.hierarchy=Org. tree
+TreeTablePanel.menu.addOrgUnit=Add org. unit
+TreeTablePanel.menu.deleteOrgUnit=Delete org. unit
+TreeTablePanel.menu.move=Move
