--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -16,5 +16,8 @@
 
 TreeTablePanel.hierarchy=Org. tree
 TreeTablePanel.menu.addOrgUnit=Add org. unit
-TreeTablePanel.menu.deleteOrgUnit=Delete org. unit
+TreeTablePanel.menu.addUser=Add user
+TreeTablePanel.menu.delete=Delete
+TreeTablePanel.menu.removeFromHierarchy=Remove from org. unit
+TreeTablePanel.menu.addToHierarchy=Add to org. unit
 TreeTablePanel.menu.move=Move
