org. tree height fixed with JS, now resizing properly

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-TreeTablePanel.hierarchy=Org. tree
+TreeTablePanel.hierarchy=Org. hierarchy
 TreeTablePanel.menu.addOrgUnit=Add org. unit
 TreeTablePanel.menu.addUser=Add user
 TreeTablePanel.menu.delete=Delete
