--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -21,3 +21,6 @@ TreeTablePanel.menu.delete=Delete
 TreeTablePanel.menu.removeFromHierarchy=Remove from org. unit
 TreeTablePanel.menu.addToHierarchy=Add to org. unit
 TreeTablePanel.menu.move=Move
+TreeTablePanel.message.nothingSelected=No object has been selected.
+TreeTablePanel.message.deleteObjectConfirm=Do you really want to delete selected {0} object(s)?
+TreeTablePanel.dialog.title.confirmDelete=Confirm delete
