First attempt at MID-1585 (task progress indicator). (cherry picked from commit 5c4d593)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
@@ -19,6 +19,7 @@ pageTasks.task.category=Category
 pageTasks.task.objectRef=Object reference
 pageTasks.task.execution=Execution
 pageTasks.task.executingAt=Executing at
+pageTasks.task.progress=Progress
 pageTasks.task.currentRunTime=Current run time
 pageTasks.task.scheduledToRunAgain=Scheduled to start again
 pageTasks.task.status=Status
