operations for org. tree page implemented, not tested yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser.properties
@@ -17,3 +17,4 @@
 OrgUnitBrowser.title=Choose new org. unit parent
 OrgUnitBrowser.search=Search
 OrgUnitBrowser.cancel=Cancel
+OrgUnitBrowser.createRoot=Make it root
