MID-954 - work on SystemConfig page. Work still in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageSystemConfiguration.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageSystemConfiguration.properties
@@ -17,3 +17,14 @@ page.title=Configuration
 page.subTitle=for midPoint
 pageSystemConfiguration.system.title=System
 pageSystemConfiguration.logging.title=Logging
+
+pageSystemConfiguration.assignmentPolicyEnforcement.value.none=None
+pageSystemConfiguration.assignmentPolicyEnforcement.value.positive=Positive
+pageSystemConfiguration.assignmentPolicyEnforcement.value.legalize=Legalize
+pageSystemConfiguration.assignmentPolicyEnforcement.value.mark=Mark
+pageSystemConfiguration.assignmentPolicyEnforcement.value.full=Full
+AEPlevel.NONE=None
+AEPlevel.POSITIVE=Positive
+AEPlevel.LEGALIZE=Relative
+AEPlevel.MARK=Mark
+AEPlevel.FULL=Full
