org. tree page fixes.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -450,3 +450,10 @@ operation.com.evolveum.midpoint.web.page.admin.resources.PageResourceEdit.saveRe
 
 HoursValidator.range=Field '${label}' have to be between ${minimum} and ${maximum}.
 RangeValidator.range=Field '${label}' have to be between ${minimum} and ${maximum}.
+
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.moveObjects=Move objects (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.moveObject=Move object (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.deleteObjects=Delete objects (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.deleteObject=Delete object (Gui)
+operation.com.evolveum.midpoint.web.util.WebModelUtils.loadObject=Load object (Gui)
+operation.com.evolveum.midpoint.web.util.WebModelUtils.deleteObject=Delete object (Gui)
